; ModuleID = '/home/carl/AnghaBench/redis/src/extr_geohash_helper.c_geohashAlign52Bits.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_geohash_helper.c_geohashAlign52Bits.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @geohashAlign52Bits(i64 %0) #0 {
  %2 = alloca %struct.TYPE_3__, align 4
  %3 = alloca i32, align 4
  %4 = bitcast %struct.TYPE_3__* %2 to i64*
  store i64 %0, i64* %4, align 4
  %5 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %2, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  store i32 %6, i32* %3, align 4
  %7 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %2, i32 0, i32 1
  %8 = load i32, i32* %7, align 4
  %9 = mul nsw i32 %8, 2
  %10 = sub nsw i32 52, %9
  %11 = load i32, i32* %3, align 4
  %12 = shl i32 %11, %10
  store i32 %12, i32* %3, align 4
  %13 = load i32, i32* %3, align 4
  ret i32 %13
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
